NMPRK/nmprkC/nmprkC.h


NMPRKC_API
nmprk_status_t
NMPRK_SetDebugCallback(nmprk_debug_callback callback);
NMPRKC_API
nmprk_status_t
NMPRK_ConnectLocal(
	OUT nmprk_conn_handle_t *h);
NMPRKC_API
nmprk_status_t
NMPRK_ConnectRemote(
	IN nmprk_connect_remote_parameters_t *input, 
	OUT nmprk_conn_handle_t *h);
NMPRKC_API
nmprk_status_t
NMPRK_Disconnect(
	IN nmprk_conn_handle_t h);
NMPRKC_API
nmprk_status_t
NMPRK_SetDefaultNmCommandBridging(
	IN nmprk_conn_handle_t h,
	IN byte_t channel,
	IN byte_t address);
NMPRKC_API
nmprk_status_t
NMPRK_SendNonBridgedCommand(
	IN nmprk_conn_handle_t h,
	IN ipmi_req_t *req,
	OUT ipmi_rsp_t *rsp);
NMPRKC_API
nmprk_status_t
NMPRK_SendBridgedCommand(
	IN nmprk_conn_handle_t h,
	IN byte_t channel,
	IN byte_t address,
	IN ipmi_req_t *req,
	OUT ipmi_rsp_t *rsp);
NMPRKC_API
nmprk_status_t
NMPRK_SendNmCommand(
	IN nmprk_conn_handle_t h,
	IN ipmi_req_t *req,
	OUT ipmi_rsp_t *rsp);
NMPRKC_API
nmprk_status_t
NMPRK_GetLastRequestResponse(
	IN nmprk_conn_handle_t h,
	OUT ipmi_capture_req_t *req,
	OUT ipmi_capture_rsp_t *rsp);
NMPRKC_API
nmprk_status_t
NMPRK_GetErrorString(
	IN nmprk_status_t code, 
	IN OUT char_t *str,
	IN int_t strsize);
NMPRKC_API
nmprk_status_t
NMPRK_EnableDisablePolicyControl(
	IN nmprk_conn_handle_t h,
	IN nm_enable_disable_policy_control_input_t *input);
NMPRKC_API
nmprk_status_t
NMPRK_SetPolicy(
	IN nmprk_conn_handle_t h,
	IN nm_set_policy_input_t *input);
NMPRKC_API
nmprk_status_t
NMPRK_GetPolicy(
	IN nmprk_conn_handle_t h,
	IN nm_get_policy_input_t *input,
	OUT nm_get_policy_output_t *output);
NMPRKC_API
nmprk_status_t
NMPRK_SetPolicyAlertThresholds(
	IN nmprk_conn_handle_t h,
	IN nm_set_policy_alert_thresholds_input_t *input);
NMPRKC_API
nmprk_status_t
NMPRK_GetPolicyAlertThresholds(
	IN nmprk_conn_handle_t h,
	IN nm_get_policy_alert_thresholds_input_t *input,
	OUT nm_get_policy_alert_thresholds_output_t *output);
NMPRKC_API
nmprk_status_t
NMPRK_SetPolicySuspendPeriods(
	IN nmprk_conn_handle_t h,
	IN nm_set_policy_suspend_periods_input_t *input);
NMPRKC_API
nmprk_status_t
NMPRK_GetPolicySuspendPeriods(
	IN nmprk_conn_handle_t h,
	IN nm_get_policy_suspend_periods_input_t *input,
	OUT nm_get_policy_suspend_periods_output_t *output);
NMPRKC_API
nmprk_status_t
NMPRK_ResetStatistics(
	IN nmprk_conn_handle_t h,
	IN nm_reset_statistics_input_t *input);
NMPRKC_API
nmprk_status_t
NMPRK_GetStatistics(
	IN nmprk_conn_handle_t h,
	IN nm_get_statistics_input_t *input,
	OUT nm_get_statistics_output_t *output);
NMPRKC_API
nmprk_status_t
NMPRK_GetCapabilities(
	IN nmprk_conn_handle_t h,
	IN nm_get_capabilities_input_t *input,
	OUT nm_get_capabilities_output_t *output);
NMPRKC_API
nmprk_status_t
NMPRK_GetVersion(
	IN nmprk_conn_handle_t h,
	OUT nm_get_version_output_t *output);
NMPRKC_API
nmprk_status_t
NMPRK_SetPowerDrawRange(
	IN nmprk_conn_handle_t h,
	IN nm_set_power_draw_range_input_t *input);
NMPRKC_API
nmprk_status_t
NMPRK_SetAlertDestination(
	IN nmprk_conn_handle_t h,
	IN nm_set_alert_destination_input_t *input);
NMPRKC_API
nmprk_status_t
NMPRK_GetAlertDestination(
	IN nmprk_conn_handle_t h,
	OUT nm_get_alert_destination_output_t *output);
NMPRKC_API
nmprk_status_t
NMPRK_PlatformCharacterizationLaunchRequest(
	IN nmprk_conn_handle_t h,
	IN nm_platform_characterization_launch_req_input_t *input);
NMPRKC_API
nmprk_status_t
NMPRK_GetPowerCharacterizationRange(
	IN nmprk_conn_handle_t h,
	IN nm_get_nm_power_characterization_range_input_t *input,
	OUT nm_get_nm_power_characterization_range_output_t *output);
NMPRKC_API
nmprk_status_t
NMPRK_GetCupsCapabilities(
	IN nmprk_conn_handle_t h,
	OUT nm_get_cups_capabilities_output_t *output);
NMPRKC_API
nmprk_status_t
NMPRK_GetCupsData(
	IN nmprk_conn_handle_t h,
	IN nm_get_cups_data_input_t *input,
	OUT nm_get_cups_data_output_t *output);
NMPRKC_API
nmprk_status_t
NMPRK_SetCupsConfiguration(
	IN nmprk_conn_handle_t h,
	IN nm_set_cups_configuration_input_t *input);
NMPRKC_API
nmprk_status_t
NMPRK_GetCupsConfiguration(
	IN nmprk_conn_handle_t h,
	OUT nm_get_cups_configuration_output_t *output);
NMPRKC_API
nmprk_status_t
NMPRK_SetCupsPolicies(
	IN nmprk_conn_handle_t h,
	IN nm_set_cups_policies_input_t *input);
NMPRKC_API
nmprk_status_t
NMPRK_GetCupsPolicies(
	IN nmprk_conn_handle_t h,
	IN nm_get_cups_policies_input_t *input,
	OUT nm_get_cups_policies_output_t *output);
NMPRKC_API
nmprk_status_t
NMPRK_GetAllPolicies(
	IN nmprk_conn_handle_t h,
	IN OUT nm_policy_info_t *policies,
	IN OUT int_t *policiesSize);
NMPRKC_API 
nmprk_status_t 
NMPRK_GetDiscoveryParameters(
	IN nmprk_conn_handle_t h, 
	OUT nm_discovery_parameters_t *params);
NMPRKC_API 
nmprk_status_t
NMPRK_IPMI_GetDeviceId(
	IN nmprk_conn_handle_t h,
	OUT nm_ipmi_device_id_t *devId);
NMPRKC_API 
nmprk_status_t
NMPRK_IPMI_GetSdrInfo(
	IN nmprk_conn_handle_t h,
	OUT nm_ipmi_repo_info_t *info);
NMPRKC_API 
nmprk_status_t
NMPRK_IPMI_GetSdrRecord(
	IN nmprk_conn_handle_t h,
	IN ushort_t recordId,
	OUT ushort_t *nextRecord,
	OUT nm_ipmi_sdr_record_t *record);
NMPRKC_API 
nmprk_status_t
NMPRK_IPMI_AddSdrRecord(
	IN nmprk_conn_handle_t h,
	IN nm_ipmi_sdr_record_t *record,
	OUT ushort_t *recordId);
NMPRKC_API 
nmprk_status_t
NMPRK_IPMI_DeleteSdrRecord(
	IN nmprk_conn_handle_t h,
	IN ushort_t recordId);
NMPRKC_API 
nmprk_status_t
NMPRK_IPMI_ClearSdrRepository(
	IN nmprk_conn_handle_t h);