NMPRK/NMPRK.cs


        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_SetDebugCallback", SetLastError = true)]
        public static extern int SetDebugCallback(
            [In] nmprk_debug_callback cb);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_ConnectLocal", SetLastError = true)]
        public static extern int ConnectLocal(
            [In, Out] ref int handle);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_ConnectRemote", SetLastError = true)]
        public static extern int ConnectRemote(
            [In] ref nmprk_connect_remote_parameters_t input,
            [In, Out] ref int handle);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_Disconnect", SetLastError = true)]
        public static extern int Disconnect(
            [In] int handle);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_GetDiscoveryParameters", SetLastError = true)]
        public static extern int GetDiscoveryParameters(
            [In] int h,
            [In, Out] ref nm_discovery_parameters_t parameters);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_GetAllPolicies", SetLastError = true)]
        public static extern int GetAllPolicies(
            [In] int h,
            [In, Out] nm_policy_info_t[] policies,
            [In, Out] ref int policiesSize);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_SetDefaultNmCommandBridging", SetLastError = true)]
        public static extern int SetDefaultNmCommandBridging(
            [In] int h,
            [In] byte channel,
            [In] byte address);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_SendNonBridgedCommand", SetLastError = true)]
        public static extern int SendNonBridgedCommand(
            [In] int h,
            [In] ref ipmi_req_t req,
            [In, Out] ref ipmi_rsp_t rsp);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_SendBridgedCommand", SetLastError = true)]
        public static extern int SendBridgedCommand(
            [In] int h,
            [In] byte channel,
	        [In] byte address,
            [In] ref ipmi_req_t req,
            [In, Out] ref ipmi_rsp_t rsp);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_SendNmCommand", SetLastError = true)]
        public static extern int SendNmCommand(
            [In] int h,
            [In] ref ipmi_req_t req,
            [In, Out] ref ipmi_rsp_t rsp);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_GetLastRequestResponse", SetLastError = true)]
        public static extern int GetLastRequestResponse(
            [In] int h,
            [In, Out] ref ipmi_capture_req_t req,
            [In, Out] ref ipmi_capture_rsp_t rsp);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_GetErrorString", SetLastError = true)]
        protected static extern int GetErrorString(int statusCode, StringBuilder str, int maxLength);

        public static string GetErrorString(int statusCode)
        {
            StringBuilder sb = new StringBuilder(1024);
            GetErrorString(statusCode, sb, 1024);
            return sb.ToString();
        }

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_EnableDisablePolicyControl", SetLastError = true)]
        public static extern int EnableDisablePolicyControl(
            [In] int h,
            [In] ref nm_enable_disable_policy_control_input_t input);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_SetPolicy", SetLastError = true)]
        public static extern int SetPolicy(
            [In] int h,
            [In] ref nm_set_policy_input_t input);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_GetPolicy", SetLastError = true)]
        public static extern int GetPolicy(
            [In] int h,
            [In] ref nm_get_policy_input_t input,
            [In, Out] ref nm_get_policy_output_t output);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_SetPolicyAlertThresholds", SetLastError = true)]
        public static extern int SetPolicyAlertThresholds(
            [In] int h,
            [In] ref nm_set_policy_alert_thresholds_input_t input);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_GetPolicyAlertThresholds", SetLastError = true)]
        public static extern int GetPolicyAlertThresholds(
            [In] int h,
            [In] ref nm_get_policy_alert_thresholds_input_t input,
            [In, Out] ref nm_get_policy_alert_thresholds_output_t output);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_SetPolicySuspendPeriods", SetLastError = true)]
        public static extern int SetPolicySuspendPeriods(
            [In] int h,
            [In] ref nm_set_policy_suspend_periods_input_t input);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_GetPolicySuspendPeriods", SetLastError = true)]
        public static extern int GetPolicySuspendPeriods(
            [In] int h,
            [In] ref nm_get_policy_suspend_periods_input_t input,
            [In, Out] ref nm_get_policy_suspend_periods_output_t output);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_ResetStatistics", SetLastError = true)]
        public static extern int ResetStatistics(
            [In] int h,
            [In] ref nm_reset_statistics_input_t input);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_GetStatistics", SetLastError = true)]
        public static extern int GetStatistics(
            [In] int h,
            [In] ref nm_get_statistics_input_t input,
            [In, Out] ref nm_get_statistics_output_t output);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_GetCapabilities", SetLastError = true)]
        public static extern int GetCapabilities(
            [In] int h,
            [In] ref nm_get_capabilities_input_t input,
            [In, Out] ref nm_get_capabilities_output_t output);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_GetVersion", SetLastError = true)]
        public static extern int GetVersion(
            [In] int h,
            [In, Out] ref nm_get_version_output_t output);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_SetPowerDrawRange", SetLastError = true)]
        public static extern int SetPowerDrawRange(
            [In] int h,
            [In] ref nm_set_power_draw_range_input_t input);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_SetAlertDestination", SetLastError = true)]
        public static extern int SetAlertDestination(
            [In] int h,
            [In] ref nm_set_alert_destination_input_t input);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_GetAlertDestination", SetLastError = true)]
        public static extern int GetAlertDestination(
            [In] int h,
            [In, Out] ref nm_get_alert_destination_output_t output);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_PlatformCharacterizationLaunchRequest", SetLastError = true)]
        public static extern int PlatformCharacterizationLaunchRequest(
            [In] int h,
            [In] ref nm_platform_characterization_launch_req_input_t input);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_GetPowerCharacterizationRange", SetLastError = true)]
        public static extern int GetPowerCharacterizationRange(
            [In] int h,
            [In] ref nm_get_power_characterization_range_input_t input,
            [In, Out] ref nm_get_power_characterization_range_output_t output);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_GetCupsCapabilities", SetLastError = true)]
        public static extern int GetCupsCapabilities(
            [In] int h,
            [In, Out] ref nm_get_cups_capabilities_output_t output);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_GetCupsData", SetLastError = true)]
        public static extern int GetCupsData(
            [In] int h,
            [In] ref nm_get_cups_data_input_t input,
            [In, Out] ref nm_get_cups_data_output_t output);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_SetCupsConfiguration", SetLastError = true)]
        public static extern int SetCupsConfiguration(
            [In] int h,
            [In] ref nm_set_cups_configuration_input_t input);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_GetCupsConfiguration", SetLastError = true)]
        public static extern int GetCupsConfiguration(
            [In] int h,
            [In, Out] ref nm_get_cups_configuration_output_t output);
        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_SetCupsPolicies", SetLastError = true)]
        public static extern int SetCupsPolicies(
            [In] int h,
            [In] ref nm_set_cups_policies_input_t input);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_GetCupsPolicies", SetLastError = true)]
        public static extern int GetCupsPolicies(
            [In] int h,
            [In] ref nm_get_cups_policies_input_t input,
            [In, Out] ref nm_get_cups_policies_output_t output);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_IPMI_GetDeviceId", SetLastError = true)]
        public static extern int IPMI_GetDeviceId(
            [In] int h,
            [In, Out] ref nm_ipmi_device_id_t devId);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_IPMI_GetSdrInfo", SetLastError = true)]
        public static extern int IPMI_GetSdrInfo(
            [In] int h,
            [In, Out] ref nm_ipmi_repo_info_t info);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_IPMI_GetSdrRecord", SetLastError = true)]
        public static extern int IPMI_GetSdrRecord(
            [In] int h,
            [In] ushort recordId,
            [In, Out] ref ushort nextRecord,
            [In, Out] ref nm_ipmi_sdr_record_t record);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_IPMI_AddSdrRecord", SetLastError = true)]
        public static extern int IPMI_AddSdrRecord(
            [In] int h,
            [In] ref nm_ipmi_sdr_record_t record,
            [In, Out] ref ushort recordId);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_IPMI_DeleteSdrRecord", SetLastError = true)]
        public static extern int IPMI_DeleteSdrRecord(
            [In] int h,
            [In] ushort recordId);

        [DllImport("nmprkC", CallingConvention = CallingConvention.Cdecl, EntryPoint = "NMPRK_IPMI_ClearSdrRepository", SetLastError = true)]
        public static extern int IPMI_ClearSdrRepository(
            [In] int h);
